--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html lang="en"><head>
+
+<!--  Based on the three.js example by https://twitter.com/fernandojsg -->
+
+
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 		<title>three.js 372-vertex distance graph</title>
 		<meta charset="utf-8">
@@ -16,7 +20,6 @@
 		<div id="container"><div style="position: fixed; top: 0px; left: 0px; cursor: pointer; opacity: 0.9; z-index: 10000;"><canvas width="80" height="48" style="width: 80px; height: 48px; display: block;"></canvas><canvas width="80" height="48" style="width: 80px; height: 48px; display: none;"></canvas></div></div>
 		<div id="info">
 			<a href="https://threejs.org/" target="_blank" rel="noopener">three.js</a><br>Displaying an embedding of a distance graph<br>
-			Based on the code by <a href="https://twitter.com/fernandojsg">fernandojsg</a>
 		</div>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script type="module">
